--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.4"
   },
